fix horizontal whitespace

--- a/docs/dashboard/requests/css/dashboard-table-main.css
+++ b/docs/dashboard/requests/css/dashboard-table-main.css
@@ -2,6 +2,7 @@
     height: 80vh;
     width: 100%;
     overflow-y: auto;
+    position: relative;
 }
 
 .table-container thead th {
